UNRELEASED CHANGES

  * The way to build the documentation has changed. Instead of running
    `setup.py build_sphinx`, run `./build_docs.sh`. To generate PDF
    documentation, follow this with `cd doc/pdf && make`.

  * The `s3ql_verify` tool is now able to detect the kind of corruption that
    was introduced by the fsck.s3ql data corruption bug described below.

2021-06-03, S3QL 3.7.3

  * Fixed a DATA CORRUPTION bug in fsck.s3ql that caused the recorded size of uploaded
    dirty blocks to be rounded up to the next multiple of 512 bytes, effectively appending
    up to 512 zero-bytes to the end of affected files.

    This problem was introduced in version 3.4.1 (released 2020-05-08) as part of a
    seemingly very minor improvement to cache usage calculation.

    You can tell that a file has (likely) been affected from fsck.s3ql messages of the
    form:

    WARNING: Writing dirty block <X> of inode <Y>

    followed later by:

    WARNING: Size of inode <Y> (<path_to_file>) does not agree with number of blocks, \
    setting from <reasonable_size> to <size rounded to next multiple of 512)


2021-05-04, S3QL 3.7.2

  * Fixed a crash with `dugong.StateError` in the Google Storage backend when the
    authentication token expires in the middle of an upload.

  * S3QL is now compatible with setuptools >= 47.


2021-03-07, S3QL 3.7.1

  * The tcp-timeout backend option of the B2 Backend works now.

  * mount.s3ql no longer crashes with "No Upload Threads available" when not running in
    foreground.


2021-01-03, S3QL 3.7.0

  * S3QL now requires Python 3.7 or newer.

  * S3QL now requires pyfuse3 of any version between 3.2.0 (inclusive) and 4.0 (exclusive).

  * S3QL now supports newer AWS S3 regions like eu-south-1.

  * mount.s3ql now again includes debugging information in its log output when
    encountering an unexpected exception. This was broken in version 3.4.0, resulting in
    mount.s3ql seemingly terminating at random in such a situation.
